# rusted

./: Cargo.toml  README.adoc
src/: commands.rs  errors.rs  lib.rs  parse.rs
src/commands/: append_text.rs  change_text.rs  mod.rs
